--- a/self blog/index.html
+++ b/self blog/index.html
@@ -157,6 +157,6 @@
             
         </div>     
         <!-- End #contact-form -->
-    <div class="footer"></div>
+    <div class="footer">bb</div>
 </body>
 </html>
