--- a/self blog/index.html
+++ b/self blog/index.html
@@ -157,6 +157,14 @@
             
         </div>     
         <!-- End #contact-form -->
-    <div class="footer">bb</div>
+    <div class="footer">
+        <div class="social_icon ic1"></div>
+        <div class="social_icon ic1"></div>
+        <div class="social_icon ic1"></div>
+        <div class="social_icon ic1"></div>
+        <div class="social_icon ic1"></div>
+        <div class="social_icon ic1"></div>
+        <div class="social_icon ic1"></div>
+    </div>
 </body>
 </html>
